Fix font size imbalance in shopping cart and checkout page

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -30,7 +30,7 @@
                         <div class="row main align-items-center">
                             <div class="col-2"> </div>
                             <div class="col">
-                                <div class="row text-muted cart-items">Product</div>
+                                <div class="row cart-items">Product</div>
                             </div>
                             <div class="col cart-items">Qty</div>
                             <div class="col cart-items">Unit Price</div>
@@ -47,7 +47,7 @@
                                 alt="{{ product.friendly_name }}"
                               /></div>
                             <div class="col">
-                                <div class="row text-muted cart-items">{{ product.friendly_name }}</div>
+                                <div class="row cart-items">{{ product.friendly_name }}</div>
                             </div>
                             <div class="col cart-items"> {{ item.quantity }} </div>
                             <div class="col cart-items">€{{ product.price }} </div>
