--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -40,10 +40,10 @@
                     </div>
                     <div class="col-7">
                         <p class="my-0"><strong>{{ item.product.friendly_name }}</strong></p>
-                        <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                        <p class="my-0 small ">Qty: {{ item.quantity }}</p>
                     </div>
                     <div class="col-3 text-right">
-                        <p class="my-0 small text-muted">€ {{ item.product.price }}</p>
+                        <p class="my-0 small ">€ {{ item.product.price }}</p>
                     </div>
                 </div>
             {% endfor %}
