Correct base.html by taking messages from validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,10 +65,8 @@
         <div class="col-sm-12 col-md-9">
           <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <a href="{% url 'home' %}" class="main-logo-link links">
+                <a href="{% url 'home' %}" class="navbar-brand main-logo-link links">
                   <h2 class="logo-font">SmartTech.</h2>
-                </a>
                 </a>
               <button
                 class="navbar-toggler"
@@ -200,7 +198,6 @@
                 name="search"
                 placeholder="What are you looking for?"
                 aria-label="Search"
-                aria-describedby="basic-addon2"
                 id="target"
               />
               <div class="input-group-append" id="search-button">
