Fix shopping cart item in navbar to remove error in html validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -164,6 +164,7 @@
                       <span class="shopping-basket-icon">
                         <span class="badge rounded-pill bg-shopping-cart">
                           <i class="fas fa-shopping-basket"></i>
+                          <div>
                           <p class="p-basket">
                             {% if product_count %} {{ product_count }} 
                             {% else %} 0 
@@ -174,6 +175,7 @@
                             {% else %} €0.00 
                             {%endif %}
                           </p>
+                        </div>
                         </span></span
                       >
                     </a>
