Replace span by div in shopping cart context in navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -161,8 +161,8 @@
                   {% endif %}
                   <li class="list-inline-item">
                     <a href="{% url 'view_cart' %}">
-                      <span class="shopping-basket-icon">
-                        <span class="badge rounded-pill bg-shopping-cart">
+                      <div class="shopping-basket-icon">
+                        <div class="badge rounded-pill bg-shopping-cart">
                           <i class="fas fa-shopping-basket"></i>
                           <div>
                           <p class="p-basket">
@@ -176,7 +176,7 @@
                             {%endif %}
                           </p>
                         </div>
-                        </span></span
+                      </div></div
                       >
                     </a>
                   </li>
