Remove type attribute from javascript elements

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -136,7 +136,7 @@
 {% include 'products/includes/quantity_button.html' %} 
 {% include 'includes/main_js.html' %} 
 
-<script type="text/javascript">
+<script>
     $("#error-wishlist").hide();
     $("#wishlistbtn").click(function(){
     $("#error-wishlist").toggle();
