--- a/templates/base.html
+++ b/templates/base.html
@@ -238,7 +238,7 @@
     {% endif %} 
     
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
       $(document).ready(function () {
         $(".toast").toast("show");
       });
