--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -144,7 +144,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
   $(".btt-link").click(function (e) {
     window.scrollTo(0, 0);
   });
