Remove type attribute from javascript elements part 2

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -128,7 +128,7 @@
 {% include 'products/includes/quantity_button.html' %} 
 {% include 'includes/main_js.html' %} 
 
-<script type="text/javascript">
+<script>
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
