--- a/templates/includes/main_js.html
+++ b/templates/includes/main_js.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script >
   var showText = function (target, message, index, interval) {
     if (index < message.length) {
       $(target).append(message[index++]);
@@ -13,7 +13,7 @@
   });
 </script>
 
-<script type="text/javascript">
+<script>
   $("#target").keydown(function () {
     $("#target").css("background-color", "#FED8b1");
   });
