--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,11 +5,29 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<div
+  class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto"
+>
+  <div class="card-logout card0 border-0">
+    <div class="row d-flex">
+      <div class="col-lg-12">
+        <div class="card2 card-logout border-0 px-4 py-5">
+          <div class="row mb-4 px-3">
+            <h1>{% trans "Set Password" %}</h1>
+            <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 {% endblock %}
+
+
