--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,21 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+ 
+<div class="card-logout card0 border-0">
+    <div class="row d-flex">
+      <div class="col-lg-12">
+        <div class="card2 card-logout border-0 px-4 py-5">
+          <div class="row mb-4 px-3">
+            <h1>{% trans "Change Password" %}</h1>
+            <p>{% trans 'Your password is now changed.' %}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+
 {% endblock %}
+
+
+
