--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 mb-4> Your shopping Cart</h2>
+            <h2> Your shopping Cart</h2>
             <hr>
         </div>
     </div>
