Improve UI for quantity buttons in product details page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -72,7 +72,7 @@
             <div class="input-group">
               <div class="input-group-prepend">
                 <button
-                  class="decrement-qty btn btn-black rounded-0"
+                  class="decrement-qty btn btn-black"
                   data-item_id="{{ product.id }}"
                   id="decrement-qty_{{ product.id }}"
                 >
@@ -93,7 +93,7 @@
               />
               <div class="input-group-append">
                 <button
-                  class="increment-qty btn btn-black rounded-0"
+                  class="increment-qty btn"
                   data-item_id="{{ product.id }}"
                   id="increment-qty_{{ product.id }}"
                 >
