--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
                 id="target"
               />
               <div class="input-group-append" id="search-button">
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-primary btn-primary-search" type="submit">
                   <i class="fas fa-search fa-sm"></i>
                 </button>
               </div>
