Change HOME by CANCEL in logout page

--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -30,7 +30,7 @@
                 <button class="btn btn-blue text-center" type="submit">
                   {% trans "Sign Out" %}
                 </button>
-                <a class="btn btn-yellow text-center" href="{% url 'home' %}" role="button">{% trans "HOME" %}</a>
+                <a class="btn btn-yellow text-center" href="{% url 'home' %}" role="button">{% trans "CANCEL" %}</a>
 
               </div>
 
